# Agentic-Ai-Chatbot-Parser

./: Dockerfile  README.md  UPGRADE_NOTES.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: dcf399b3499a_add_users_table.py
app/: main.py
app/agent/: grok_agent.py  main_agent.py  prompt.py
app/core/: cache.py  config.py  deps.py
app/db/: database.py  init_db.py
app/llm/: grok.py
app/mcp/: config.py  instance.py  server.py
app/mcp/tools/: external_api.py  health.py  real_world.py  registry.py
app/models/: chat.py  user.py
app/rag/: embedding.py  graph.py  ingest.py  nodes.py  qdrant_store.py  state.py
app/routes/: auth.py  chat.py  document.py  upload.py
app/schemas/: auth.py
app/services/: document_parser.py  llm_service.py  memory.py  ocr_service.py
app/websocket/: chat_ws.py
